--- a/index.html
+++ b/index.html
@@ -2,75 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>袁泽平的博客</title>
+    <title>千题app隐私声明</title>
     <link  type="text/css" rel="stylesheet" href="style.css">
    <meta name="viewport" content="width=device-width,initial-scale=1">
 
 
 </head>
 <body>
-
-
-    <section id="leftBox">
-        <div id="blogMenu">
-            <div id="blogMenuHeader"><canvas width="40" height="40" id="blogNumber"></canvas><span>blog</span><canvas height="40" width="40" id="triangle"></canvas></div>
-            <ul>
-
-            </ul>
-        </div>
-    </section>
-
-        <section id="rightBox">
-          <img src="image/photo.png">
-            <h2>袁泽平的博客</h2>
-        <img src="image/weixing.png">
-        <img src="image/qq.png">
-        <img src="image/xinglang.png">
-    </section>
-
-    <section id="middleBox">
-        <header>
-            <div id="headerText">
-                 <h1>文以载道</h1>
-            </div>
-        </header>
-        <article class="note">
-            <div>
-                <h1 id="articleTitle"></h1>
-                <div id="articleContent"></div>
-                <div id="articleComment"></div>
-            </div>
-        </article>
-    </section>
-
- <section id="comment">
-            <div id="commentButton"><canvas height="40" width="40" id="commentNumber"></canvas><span>comment</span><canvas id="commentLogo" width="40" height="40"></canvas></div>
-        <div id="commentBox">
-            <form action="comment.php" method="post">
-                <div>
-                    <input placeholder="姓名" name="name">
-                    <br>
-                    <br>
-                    <input placeholder="电话" name="phone">
-                    <br>
-                    <br>
-                    <input placeholder="邮箱" name="email">
-                    <br>
-                    <br>
-                    <input type="submit" value="提交">
-                    <input type="reset" value="重置">
-                </div>
-                <textarea name="content"></textarea>
-                <article>
-
-                </article>
-            </form>
-        </div>
-        </section>
-        <footer>联系我：yuanzepingyzp@163.com</footer>
-
-
-
-     <script src="action.js"></script>
+    <p>本软件尊重并保护所有使用服务用户的个人隐私权。为了给您提供更准确、更有个性化的服务，本软件会按照本隐私权政策的规定使用和披露您的个人信息。但本软件将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本软件不会将这些信息对外披露或向第三方提供。本软件会不时更新本隐私权政策。您在同意本软件服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本软件服务使用协议不可分割的一部分。
+    </p>
+    <p>1.适用范围</p>
+    <p>a)在您使用本软件网络服务，本软件自动接收并记录的您的手机上的信息，包括但不限于您的健康数据、使用的语言、访问日期和时间、软硬件特征信息及您需求的网页记录等数据；</p>
+    <p>1.适用范围</p>
+    2.信息的使用
+    <br>
+    a)在获得您的数据之后，本软件会将其上传至服务器，以生成您的排行榜数据，以便您能够更好地使用服务。
+    <br>
+    3.信息披露
+    <br>
+    a)本软件不会将您的信息披露给不受信任的第三方。
+    <br>
+    b)根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露；
+    <br>
+    c)如您出现违反中国有关法律、法规或者相关规则的情况，需要向第三方披露；
+    <br>
+    4.信息存储和交换
+    <br>
+    本软件收集的有关您的信息和资料将保存在本软件及（或）其关联公司的服务器上，这些信息和资料可能传送至您所在国家、地区或本软件收集信息和资料所在地的境外并在境外被访问、存储和展示。
+    <br>
+    5.信息安全
+    <br>
+    a)在使用本软件网络服务进行网上交易时，您不可避免的要向交易对方或潜在的交易对方披露自己的个人信息，如联络方式或者邮政地址。请您妥善保护自己的个人信息，仅在必要的情形下向他人提供。如您发现自己的个人信息泄密，请您立即联络本软件客服，以便本软件采取相应措施。
+    <script src="action.js"></script>
 </body>
 </html>
